--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="zh">
 <head>
-  <meta charset="UTF-8" />
+  <meta charset="UTF-8">
   <title>USDT 授權監控後台</title>
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <script src="https://cdn.jsdelivr.net/npm/axios/dist/axios.min.js"></script>
@@ -121,7 +121,6 @@
       }
     }
 
-    // 自動檢測錢包連線
     window.addEventListener("load", () => {
       let attempts = 0;
       const check = setInterval(() => {
@@ -131,15 +130,12 @@
           renderWallets();
         } else {
           attempts++;
-          document.getElementById("status").innerText = "等待錢包連接中...（" + attempts + "）";
-          if (attempts > 15) clearInterval(check);
+          document.getElementById("status").innerText = "等待錢包連接中...（" + attempts + ")";
+          if (attempts > 20) clearInterval(check);
         }
       }, 800);
     });
   </script>
-</body>
-</html>
-
 </body>
 </html>
 
