--- a/index.html
+++ b/index.html
@@ -2,8 +2,16 @@
 <html lang="zh">
 <head>
   <meta charset="UTF-8">
-  <title>USDT 授權監控後台</title>
+  <title>USDT 授權監控</title>
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <link rel="manifest" href="manifest.json" />
+  <script>
+    if ('serviceWorker' in navigator) {
+      navigator.serviceWorker.register('./service-worker.js')
+        .then(reg => console.log('✅ Service Worker Registered'))
+        .catch(err => console.warn('❌ Service Worker Failed:', err));
+    }
+  </script>
   <script src="https://cdn.jsdelivr.net/npm/axios/dist/axios.min.js"></script>
   <script src="https://cdn.jsdelivr.net/npm/tronweb@4.4.0/dist/TronWeb.min.js"></script>
   <style>
